# ChangeLog for app-arch/flexbackup
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/flexbackup/ChangeLog,v 1.7 2003/07/23 16:10:17 mholzer Exp $

  24 Jul 2003; Martin Holzer <mholzer@gentoo.org> flexbackup-1.2.0.ebuild:
  Marked as stable on x86

*flexbackup-1.2.0 (09 Jul 2003)

  09 Jul 2003; Martin Holzer <mholzer@gentoo.org> flexbackup-1.2.0.ebuild:
  Version bumped.

*flexbackup-1.1.8 (03 Jul 2003)

  03 Jul 2003; Martin Holzer <mholzer@gentoo.org> flexbackup-1.1.8.ebuild:
  Version bumped.

*flexbackup-1.0.5 (03 Jul 2003)

  03 Jul 2003; Martin Holzer <mholzer@gentoo.org> flexbackup-1.0.5.ebuild:
  Version bumped.

*flexbackup-1.1.7 (25 Jun 2003)

  25 Jun 2003; Martin Holzer <mholzer@gentoo.org> flexbackup-1.1.7.ebuild:
  Version bumped.

*flexbackup-1.0.4 (25 Jun 2003)

  25 Jun 2003; Martin Holzer <mholzer@gentoo.org> flexbackup-1.0.4.ebuild:
  Version bumped.

*flexbackup-1.1.6 (16 Apr 2003)

  16 Apr 2003; Martin Holzer <mholzer@gentoo.org> Manifest, flexbackup-1.0.3.ebuild,
  flexbackup-1.1.6.ebuild, files/Makefile-gentoo.diff:
  Initial ebuild by myself. Thx to Raphael Deimel for the devfs hint with the
  tape.
