@@ -1,6 +1,13 @@
 # ChangeLog for app-arch/flexbackup
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/flexbackup/ChangeLog,v 1.7 2003/07/23 16:10:17 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/flexbackup/ChangeLog,v 1.8 2003/08/04 23:32:42 max Exp $
+
+*flexbackup-1.2.0-r1 (04 Aug 2003)
+
+  04 Aug 2003; Max Kalika <max@gentoo.org> flexbackup-1.2.0-r1.ebuild:
+  Major cleanup. Drop depend on dump and afio. Drop Makefile patch -- installs
+  fine passing CONFFILE= and BINPATH= to einstall(). Drop unneeded src_unpack().
+  Other fixes.
 
   24 Jul 2003; Martin Holzer <mholzer@gentoo.org> flexbackup-1.2.0.ebuild:
   Marked as stable on x86
